<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="fill_horizontal"
        tools:context=".SendSmsActivity"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:autofillHints="no"
            android:hint="@string/点击了采用ButterKnife绑定监听器"
            android:inputType="text"
            android:textSize="24sp" />
    </LinearLayout>


    <Button
        android:id="@+id/button1"
        android:layout_width="156dp"
        android:layout_height="50dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="580dp"
        android:text="@string/Activity作为监听器"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="157dp"
        android:layout_height="49dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="516dp"
        android:text="@string/匿名内部类"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/button3"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="444dp"
        android:text="@string/绑定到标签"
        android:onClick="click1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="156dp"
        android:layout_height="50dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="372dp"
        android:text="@string/内部类"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="156dp"
        android:layout_height="53dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="304dp"
        android:text="@string/外部类"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="156dp"
        android:layout_height="52dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="232dp"
        android:text="@string/ButterKnife绑定"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="155dp"
        android:layout_height="51dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="116dp"
        android:text="@string/系统信息"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="155dp"
        android:layout_height="54dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="48dp"
        android:text="@string/模拟进度条"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>