<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main7Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/edit_71"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/显示屏幕方向"
            android:textSize="24sp"
            android:labelFor="@id/edit_71"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_72"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:hint="@string/显示手机方向控制设备"
            android:inputType="text"
            android:labelFor="@id/edit_72"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_73"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/显示触摸屏状态"
            android:textSize="24sp"
            android:labelFor="@id/edit_73"
            android:inputType="text"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/edit_74"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/显示移动网络代号"
            android:textSize="24sp"
            android:importantForAutofill="no"
            android:labelFor="@id/edit_74"
            android:inputType="text" />
        <Button
            android:id="@+id/button_71"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/获取手机信息" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>